# magic-store-management-system

./: .gitignore  README.md  RUN.md  diagrama_classes_bce_loja_magic_2_atores_campos.html
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py  schemas.py
backend/app/domain/: excecoes.py  usuario.py
backend/app/repository/: usuario_repository.py
backend/app/service/: gerenciador_usuarios.py
backend/tests/: test_gerenciador_usuarios.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/lib/: api.ts
